fixed spacing issue with loading screen

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -38,6 +38,9 @@ td, tr {
 	-webkit-animation: rotate-center 0.6s ease-in-out infinite both;
 	        animation: rotate-center 0.6s ease-in-out infinite both;
     width: 9%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @-webkit-keyframes rotate-center {
@@ -246,6 +249,7 @@ button:focus {
 /* div that contains content that will be loaded on click of a button */
 div#loading {
     text-align: center;
+    min-height: 100vh;
     margin: 10%;
 }
 
